vlib/v/checker/tests/index_expr_implicit_int_downcast_err.vv
fn main() {
	a := [1, 2, 3]
	idx_usize := usize(1)
	println(a[idx_usize..])
}
